# Procesador

./: README.md
procesador_v19_SAFE_AUDITED/: Makefile  README.md  mapa_grupos.json  plantilla_empleados.xlsx  pyproject.toml  requirements-dev.txt  requirements.txt
procesador_v19_SAFE_AUDITED/auditoria/: auditoria_index.jsonl  auditoria_run_3c8ce471-d797-43c8-8883-9fe6fe6c1fbd.json  auditoria_run_b5458222-b5fd-4f69-9198-f28e380f0069.json  auditoria_run_b8cce0b2-a115-42da-9de3-b561abcd6443.json  auditoria_run_cf4bd588-272f-40bd-ae16-a1cd5e8d525e.json  latest.json
procesador_v19_SAFE_AUDITED/backups/: demo_input_IDGRUPO_backup_20260201_070959.xlsx  demo_input_PROCESADO_backup_20260201_070959.xlsx  input_prefijos_faltas_IDGRUPO_backup_20260201_230225.xlsx  input_prefijos_faltas_PROCESADO_backup_20260201_230225.xlsx
procesador_v19_SAFE_AUDITED/procesador/: __init__.py  audit.py  cli.py  config.py  core.py  corrections.py  faltas.py  group_admin.py  groups.py  io.py  legacy.py  logger.py  mapa_grupos.json  mapa_grupos.json.bak_20260131_074600_036322  mapa_grupos.json.bak_20260201_184310_267608  merge_inputs.py  parsers.py  pipeline.py  plantilla_empleados.xlsx  summaries.py  utils.py  validaciones.py
procesador_v19_SAFE_AUDITED/scripts/: selfcheck.py  stress_calc.py
procesador_v19_SAFE_AUDITED/tests/: conftest.py  test_admin_improvements.py  test_audit_bundle.py  test_audit_changes_jsonl.py  test_audit_jsonl.py  test_calc_fuzz_invariants.py  test_calc_sanity_cena.py  test_calc_stress_intervals.py  test_cli_error_handling.py  test_cli_flags.py  test_cli_legacy_args.py  (+30 more)
(+5 files in other folders)
