[project]
name = "procesador-asistencia"
version = "0.0.0"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # handled by black

[tool.ruff.lint.isort]
known-first-party = ["procesador"]
